[gd_scene load_steps=7 format=3 uid="uid://sa4ov8tvndtf"]

[ext_resource type="Script" path="res://GUI/interlevel_screen.gd" id="1_ytk2o"]
[ext_resource type="Environment" uid="uid://cpk5xuwcr5gby" path="res://GUI/default_bloom_camera_environment.tres" id="2_6ivnv"]
[ext_resource type="Texture2D" uid="uid://cum3ussom82gj" path="res://textures/checkerboard1.png" id="2_u42v8"]
[ext_resource type="Script" path="res://GUI/MeshInstance3D.gd" id="3_5ctak"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_penth"]
albedo_texture = ExtResource("2_u42v8")
uv1_scale = Vector3(2, 2, 2)
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_53tdm"]
flip_faces = true

[node name="interlevel_Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ytk2o")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "time: "

[node name="time" type="Label" parent="ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "..."
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "best time: "

[node name="best_time" type="Label" parent="ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "..."
horizontal_alignment = 1

[node name="Label2" type="Label" parent="ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = " new best?"

[node name="next_level" type="Button" parent="ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "next level"

[node name="retry" type="Button" parent="ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "retry"

[node name="menu" type="Button" parent="ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "return to main menu"

[node name="3d enviorment" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="3d enviorment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.575, 1.5)
environment = ExtResource("2_6ivnv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="3d enviorment"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_penth")
mesh = SubResource("BoxMesh_53tdm")
script = ExtResource("3_5ctak")

[node name="OmniLight3D" type="OmniLight3D" parent="3d enviorment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.8)
light_energy = 2.0
omni_range = 4.29257

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="button_down" from="ScrollContainer/PanelContainer/VBoxContainer/next_level" to="." method="_on_next_level_button_down"]
[connection signal="button_down" from="ScrollContainer/PanelContainer/VBoxContainer/retry" to="." method="_on_retry_button_down"]
[connection signal="button_down" from="ScrollContainer/PanelContainer/VBoxContainer/menu" to="." method="_on_menu_button_down"]
